# panorama-exames

./: README.md  docker-compose.hmg.yml  docker-compose.yml  index.html  package-lock.json  package.json
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
backend/apps/authentication/: admin.py  authentication.py  middleware.py  urls.py
backend/apps/authentication/managers/: __init__.py  user_manager.py
backend/apps/authentication/migrations/: 0001_initial.py  0002_remove_customuser_activation_token_and_more.py
backend/apps/authentication/models/: user.py
backend/apps/authentication/serializers/: __init__.py  access_request.py  admin_set_password.py  login.py  request_access.py  request_reset.py  reset_password.py  reset_request.py  set_password.py  user_list.py
backend/apps/authentication/views/: __init__.py  access_requests.py  login.py  refresh.py  request_access.py  request_reset.py  reset_password.py  reset_requests.py  set_password.py  users.py
backend/apps/core/: admin.py  tests.py  urls.py
backend/apps/core/fixtures/: initial_data.json
backend/apps/core/migrations/: 0001_initial.py  0002_remove_exam_cost.py  0003_machine_name.py  0004_remove_duty_nurse.py  0005_collection_cost.py  0006_backfill_collection_cost.py  0007_collection_cost_not_null.py
backend/apps/core/models/: __init__.py
backend/apps/core/serializers/: __init__.py  collection.py  duty.py  exam.py  machine.py  problem.py
backend/apps/core/views/: __init__.py  (+6 more)
backend/config/: settings.py  urls.py
backend/docs/: endpoints.md
(+43 files in other folders)
